--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-kakao/core": "^2.4.2",
     "@react-native-kakao/user": "^2.4.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-native-seoul/naver-login": "4.1.3",
+    "@react-native-seoul/naver-login": "^4.2.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -46,10 +46,12 @@
     "expo-web-browser": "~15.0.8",
     "lucide-react-native": "^0.555.0",
     "luxon": "^3.7.2",
+    "nanoid": "^5.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
