--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "toastify-react-native": "^7.2.3"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
