--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "osso",
+  "name": "ribbon",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -14,6 +14,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@aws-crypto/sha256-js": "^5.2.0",
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -34,7 +35,7 @@
     "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.11",
@@ -44,6 +45,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
+    "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.555.0",
     "luxon": "^3.7.2",
     "nanoid": "^5.1.6",
