--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "toastify-react-native": "^7.2.3"
+    "toastify-react-native": "^7.2.3",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
