Add customer service link

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ EXPO_PUBLIC_KAKAO_APP_KEY=
 EXPO_TERMS_OF_SERVICE_URL=
 EXPO_PRIVACY_POLICY_URL=
 EXPO_PUBLIC_FEEDBACK_URL=
+EXPO_PUBLIC_CUSTOMER_SERVICE_URL=
