--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ EXPO_PUBLIC_NAVER_CLIENT_SECRET=
 
 EXPO_PUBLIC_KAKAO_APP_KEY=
 
+EXPO_PUBLIC_MIXPANEL_TOKEN=
+
 EXPO_TERMS_OF_SERVICE_URL=
 EXPO_PRIVACY_POLICY_URL=
 EXPO_PUBLIC_FEEDBACK_URL=
