--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.555.0",
     "luxon": "^3.7.2",
+    "mixpanel-react-native": "^3.1.2",
     "nanoid": "^5.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
